tests/baselines/reference/extBaseClass2.errors.txt
==== tests/cases/compiler/extBaseClass2.ts (2 errors) ====
    module N {
        export class C4 extends M.B {
                                ~~~
!!! error TS2305: Module 'M' has no exported member 'B'.
        }
    }
    
    module M {
        export class C5 extends B {
                                ~
!!! error TS2304: Cannot find name 'B'.
        }
    }
    